@@ -28,7 +28,7 @@
 #define ORIENTATIONINTERPRETER_H
 
 #include <QObject>
-#include <QTimer>
+#include <math.h>
 #include <sensord/filter.h>
 #include <datatypes/orientationdata.h>
 #include <datatypes/posedata.h>
@@ -80,6 +80,20 @@ private:
     unsigned long discardTime;
 
     PoseData o_;
+
+    static const int DEFAULT_THRESHOLD = 250;
+    static const float RADIANS_TO_DEGREES = 180.0/M_PI;
+    static const int ANGLE_LIMIT = 45;
+    static const int SAME_AXIS_LIMIT = 5;
+
+    static const int OVERFLOW_MIN = 800;
+    static const int OVERFLOW_MAX = 1250;
+
+    static const int THRESHOLD_LANDSCAPE = 25;
+    static const int THRESHOLD_PORTRAIT = 20;
+
+    static const int DISCARD_TIME = 750000;
+    static const int AVG_BUFFER_MAX_SIZE = 10;
 
 public:
     /**
