@@ -40,11 +40,7 @@ RotationSensorChannel::RotationSensorChannel(const QString& id) :
 
     accelerometerChain_ = sm.requestChain("accelerometerchain");
     Q_ASSERT( accelerometerChain_ );
-    if (!accelerometerChain_->isValid()) {
-        isValid_ = false;
-    } else {
-        isValid_ = true;
-    }
+    isValid_ = accelerometerChain_->isValid();
 
     accelerometerReader_ = new BufferReader<AccelerationData>(128);
 
