@@ -20,6 +20,11 @@ sensord (0.6.32) unstable; urgency=low
   * Implemented buffering with few unit test cases.
   * Replaced old index based accessors for available dataranges and intervals
     with methods which query list of data with single dbus call.
+  * Some const correctness fixes.
+  * Changed some destructors to virtual which are used in inheritance.
+  * Fixed memory leak from OrientationChain.
+  * Removed SocketHandler::killSocket() hack. QObject::deleteLater() is used
+    to clean up sockets.
 
  -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Wed, 10 Nov 2010 11:54:31 +0200
 
